tests/fixtures/fail/raw_offset_non_pointer.sali
let main(): i32 = unsafe {
  let pointer = raw_offset(42, 1)
  42
}
